--- a/introduction.tex
+++ b/introduction.tex
@@ -1,10 +1,10 @@
 \chapter{Introduction}
 
-Robillard defines an API as follows: An API is the interface to implement functionality that developers can access to perform various tasks \cite{Robillard_a_field_study, Robillard_what_makes}. Application Programming Interfaces, commonly known as APIs, are used to express a software component in terms of its operations, inputs, outputs, and their types\footnote{\url{https://en.wikipedia.org/wiki/Application_programming_interface}}. APIs enable multiple software components to interact with each other. Web APIs allow software-to-software interconnectivity using web technologies as the transport mechanism of information between systems.
+Robillard defines an API as follows: An API is the interface to implement functionality that developers can access to perform various tasks \cite{Robillard_a_field_study, Robillard_what_makes}. Application Programming Interfaces, commonly known as APIs, are used to express a software component in terms of its operations, inputs, outputs, and their types\footnote{\url{https://en.wikipedia.org/wiki/Application_programming_interface}}. APIs enable multiple software components to interact with each other. Web APIs allow software-to-software interconnectivity using web technologies as the transport mechanism between systems.
 
-REST APIs are a type of API that are used to integrate software components using web technologies. Fielding defined Representational State Transfer or REST as an architectural style for developing distributed hypermedia systems \cite{Fielding_rest}. He described the design of modern Web as an example of a REST-style architecture. REST-style architecture allows software components to satisfy the data transfer needs of the modern Internet-scale applications by levergading a generic interface based on URIs and Internet media types that allow intemediate processing such as caching to improve system performance.
+REST APIs are a type of API that are used to integrate software components using web technologies. Fielding defined Representational State Transfer or REST as an architectural style for developing distributed hypermedia systems \cite{Fielding_rest}. He described the design of modern Web as an example of a REST-style architecture. REST-style architecture allows software components to satisfy the data transfer needs of the modern Internet-scale applications by leveraging a generic interface based on URIs and Internet media types that allow intemediate processing such as caching to improve system performance.
 
-REST APIs allow access to application resources over HTTP. While REST describes a generic protocol for accessing application resources, the applications are responsible for the specific representation of the resources. For example, a REST API may support multiple Internet media types such as JSON, XML, CSV for a single application resource. Similarly, two diffenent REST APIs may use the same media type but contain entirely different formats to represent their objects.
+REST APIs allow access to application resources over HTTP. While REST describes a generic protocol for accessing application resources, the applications are responsible for the specific representation of the resources. For example, a REST API may support multiple Internet media types such as JSON, XML, CSV for a single application resource. Similarly, two different REST APIs may use the same media type but contain entirely different formats to represent their objects.
 
 For example, GitHub, an online code repository hosting tool, has a REST API that can be used by third-party applications to integrate with GitHub features. The GitHub REST API\footnote{\url{https://developer.github.com/v3/repos/\#create}} has a resource called \texttt{Repository} to denote a code repository that can be identified by the URL \url{/user/repos}. To create a new \texttt{Repository} for a user, the GitHub API can be invoked via HTTP $POST$ at \url{/user/repos} using the following JSON representation of a \texttt{Repository}:
 
@@ -48,7 +48,7 @@ Currently, the process of documenting REST APIs is largely manual. Conceptually,
 The steps S1-S6 are repeated for every API action that needs to be documented, and S1-S7 need to repeated for every version of the REST API as it evolves. As depicted here, this manual process can be both time consuming and error-prone.
 
 \section{Research Goals}
-The overarching goal of my research is to improve the current state of the proces of REST API documentation process by automating the repeating manual steps in the aforementioned workflow. More specifically, I aimed to solve the following research goals:
+The overarching goal of my research is to improve the current state of the process of REST API documentation process by automating the repeating manual steps in the aforementioned workflow. More specifically, I aimed to solve the following research goals:
 
 \begin{itemize}
   \item \textit{RG1: To identify a set of REST API documentation requirements.} Existing research on API usability has derived a number of API documentation requirements primarily focusing on local APIs. Due to the structural and implementation differences between local and REST APIs, I aimed to identity REST API specific documentation requirements in my research. This has several implications as follows: having access to a scientifically derived list of REST API documentation requirements allows REST API developers to make an informed decision related to planning and execution of their documentation efforts. The requirements provide a background research that can be used by practitioners to compare and contrast existing REST API documentation tools while selecting an appropriate tool for their API. REST API documentation tool developers can also use the requirements to build necessary features.
@@ -63,7 +63,7 @@ Related to RG1 and RG2, I aimed to address the following research questions as m
   \item \textit{RO1: How are evolving REST APIs documented?} This question is aimed to analyze the gap between current industry practice around the documentation of evolving REST APIs and the proposed solutions from existing literature. This objective helped me to identify the research opportunity to work on unresolved problems related to REST API documentation.
   \item \textit{RO2: What are the requirements for usable REST API documentation?} This objective provides a necessary background for improving the state of REST API documentation process.
   \item \textit{RO3: What technique can be used to document REST APIs to meet the requirements?} This is the central research objective. I researched to develop a new technique that can fill the gap between existing REST API documentation methods and the identified requirements.
-  \item \textit{RO4: Is the proposed technique a practical one for REST API developers?} A qualitiative evaluation of the proposed technique in a real-world setup is needed to understand the feasibility and the shortcomings of the proposed technique from the perspective of the REST API developers.
+  \item \textit{RO4: Is the proposed technique a practical one for REST API developers?} A qualitative evaluation of the proposed technique in a real-world setup is needed to understand the feasibility and the shortcomings of the proposed technique from the perspective of the REST API developers.
   \item \textit{RO5: How does a documentation using the proposed technique impact REST API client developers?} This question investigates the impact of the proposed technique from the perspective of the REST API client developer effort and success rate while performing API tasks.
 \end{itemize}
 
@@ -109,7 +109,7 @@ In summary, this thesis makes the following key contributions to the body of res
 \begin{enumerate}
   \item A list of REST API documentation requirements derived from the existing literature and the current state of industry practices to be used as a guideline by practitioners and researchers.
   \item SpyREST, a novel technique and a reusable tool that uses interception to automatically generate and maintain evolving REST API documentation with usage examples from executable code.
-  \item An industrial evaluation of SpyREST to demonstrate the feasibility of the proposed technique that practitioners can follow to improve their REST API documentation experience.
+  \item An industrial evaluation of SpyREST to demonstrate the feasibility of the proposed technique that REST API developers can follow to improve their REST API documentation experience.
   \item An empirical evidence showing the common obstacles faced by REST API client developers that can be reduced with usage examples to help the prioritization of REST API documentation efforts.
 \end{enumerate}
 
